--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "ai": "^2.1.33",
+    "axios": "^1.6.7",
+    "cross-fetch": "^4.0.0",
+    "next": "14.1.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.11.1",
     "openai-edge": "^1.2.2",
-    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
